force-app/main/default/objects/Game_Score__c/Game_Score__c.object-meta.xml
<CustomObject>
    <description>Per-user per-KPI game score ledger (BRD 20.1). EOD coins earned, qualification, target vs achievement, grouped by JC.</description>
    <label>Game Score</label>
    <nameField>
        <displayFormat>GS-{000000}</displayFormat>
        <label>Score ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Game Scores</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>