force-app/main/default/objects/Game_Score__c/fields/Achievement__c.field-meta.xml
<CustomField>
    <fullName>Achievement__c</fullName>
    <label>Achievement</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>