force-app/main/default/objects/Game_Score__c/fields/Coins_Awarded__c.field-meta.xml
<CustomField>
    <fullName>Coins_Awarded__c</fullName>
    <label>Coins Awarded</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>