force-app/main/default/objects/Game_Score__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee</label>
    <description>Employee record for the scored salesperson, resolved from the User via Employee.User.</description>
    <referenceTo>Employee__c</referenceTo>
    <relationshipName>Game_Scores</relationshipName>
    <type>Lookup</type>
</CustomField>