force-app/main/default/objects/Game_Score__c/fields/Game__c.field-meta.xml
<CustomField>
    <fullName>Game__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Game</label>
    <referenceTo>Game__c</referenceTo>
    <relationshipName>Game_Scores</relationshipName>
    <type>Lookup</type>
</CustomField>