force-app/main/default/objects/Game_Score__c/fields/Game_KPI__c.field-meta.xml
<CustomField>
    <fullName>Game_KPI__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Game KPI</label>
    <referenceTo>Game_KPI__c</referenceTo>
    <relationshipName>Game_Scores</relationshipName>
    <type>Lookup</type>
</CustomField>