force-app/main/default/objects/Game_Score__c/fields/Salesperson__c.field-meta.xml
<CustomField>
    <fullName>Salesperson__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Salesperson</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Game_Scores</relationshipName>
    <type>Lookup</type>
</CustomField>