force-app/main/default/objects/Game_Score__c/fields/Score_Date__c.field-meta.xml
<CustomField>
    <fullName>Score_Date__c</fullName>
    <label>Score Date</label>
    <type>Date</type>
</CustomField>