force-app/main/default/objects/Game_Score__c/fields/Target_Coins__c.field-meta.xml
<CustomField>
    <fullName>Target_Coins__c</fullName>
    <label>Target Coins</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>