force-app/main/default/objects/Game_Score__c/fields/Target_Period__c.field-meta.xml
<CustomField>
    <fullName>Target_Period__c</fullName>
    <description>JC period (existing Target_Period__c, Type=Journey Cycle).</description>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Journey Cycle</label>
    <referenceTo>Target_Period__c</referenceTo>
    <relationshipName>Game_Scores</relationshipName>
    <type>Lookup</type>
</CustomField>